--- a/index.html
+++ b/index.html
@@ -1,14 +1,50 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tauri + React + Typescript</title>
+    <title>Axon</title>
+    
+    <!-- 首屏关键样式 - 仅用于防止白屏闪烁 -->
+    <style>
+      /* 防止白屏闪烁的最小样式 */
+      html, body, #root { height: 100%; }
+      body { margin: 0; }
+      /* 暗色主题背景 */
+      .dark body, body.dark { background-color: #111113; }
+      @media (prefers-color-scheme: dark) {
+        body:not(.light) { background-color: #111113; }
+      }
+      /* 加载动画 */
+      .app-loading {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        width: 100%;
+      }
+      .app-loading-spinner {
+        width: 32px;
+        height: 32px;
+        border: 2px solid #888;
+        border-top-color: transparent;
+        border-radius: 50%;
+        animation: spin 0.8s linear infinite;
+      }
+      @keyframes spin {
+        to { transform: rotate(360deg); }
+      }
+    </style>
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <!-- 首屏加载占位符 -->
+      <div class="app-loading">
+        <div class="app-loading-spinner"></div>
+      </div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
